--- a/views/cuve_view.xml
+++ b/views/cuve_view.xml
@@ -8,7 +8,7 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="ref"/>
+                            <field name="ref" readonly="1"/>
                             <field name="longeur_regle"/>
                             <field name="diametre"/>
                             <field name="hauteur"/>
@@ -22,6 +22,14 @@
             </form>
         </field>
     </record>
+
+    <record id="seq_cuve_ref" model="ir.sequence">
+        <field name="name">reference cuve sequence</field>
+        <field name="code">seq.cuve.ref</field>
+        <field name="prefix">cuve</field>
+        <field name="padding">5</field>
+    </record>
+
 <record model="ir.ui.view" id="cuve_tree_view">
         <field name="name">eaglefuel.cuve.list</field>
         <field name="model">eaglefuel.cuve</field>
@@ -45,6 +53,6 @@
            </field>
     </record>
 
-    <menuitem name="Cuves" id="sub_cuve_root" parent="station_root"/>
-    <menuitem name="Cuve" id="sub_sub_cuve_root" parent="sub_cuve_root" action="cuve_action"/>
+<!--    <menuitem name="Cuves" id="sub_cuve_root" parent="station_root"/>-->
+<!--    <menuitem name="Cuve" id="sub_sub_cuve_root" parent="sub_cuve_root" action="cuve_action"/>-->
 </odoo>
