--- a/views/paiement_view.xml
+++ b/views/paiement_view.xml
@@ -9,7 +9,7 @@
                      <sheet>
                          <group>
                           <group>
-                              <field name="ref"/>
+                              <field name="ref" readonly="1"/>
                               <field name="type"/>
                               <field name="montant"/>
                               <field name="description"/>
@@ -33,6 +33,13 @@
                      <field name="date"/>
                  </tree>
          </field>
+    </record>
+
+    <record id="seq_paiement_ref" model="ir.sequence">
+        <field name="name">reference paiement sequence</field>
+        <field name="code">seq.paiement.ref</field>
+        <field name="prefix">paiement</field>
+        <field name="padding">5</field>
     </record>
 
     <record model='ir.actions.act_window' id='paiement_action'>
