--- a/views/pistole_view.xml
+++ b/views/pistole_view.xml
@@ -8,7 +8,7 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="ref"/>
+                            <field name="ref" readonly="1"/>
                             <field name="number"/>
                             <field name="description"/>
                         </group>
@@ -21,6 +21,13 @@
                 </sheet>
             </form>
         </field>
+    </record>
+
+    <record id="seq_pistole_ref" model="ir.sequence">
+        <field name="name">reference pistole sequence</field>
+        <field name="code">seq.pistole.ref</field>
+        <field name="prefix">pistole</field>
+        <field name="padding">5</field>
     </record>
 
     <record model="ir.ui.view" id="pistole_tree_view">
@@ -43,6 +50,6 @@
         <field name="view_mode">tree,form</field>
     </record>
 
-    <menuitem name="Pistoles" id="sub_pistole_root" parent="station_root"/>
-    <menuitem name="Pistole" id="sub_sub_pistole_root" parent="sub_pistole_root" action="pistole_action"/>
+<!--    <menuitem name="Pistoles" id="sub_pistole_root" parent="station_root"/>-->
+<!--    <menuitem name="Pistole" id="sub_sub_pistole_root" parent="sub_pistole_root" action="pistole_action"/>-->
 </odoo>
