--- a/views/pompe_view.xml
+++ b/views/pompe_view.xml
@@ -8,7 +8,7 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="ref"/>
+                            <field name="ref" readonly="1"/>
                             <field name="pompe_number"/>
                             <field name="nom"/>
 <!--                            <field name="current_date"/>-->
@@ -57,6 +57,14 @@
             </tree>
         </field>
     </record>
+
+    <record id="seq_pompe_ref" model="ir.sequence">
+        <field name="name">reference station sequence</field>
+        <field name="code">seq.pompe.ref</field>
+        <field name="prefix">pompe</field>
+        <field name="padding">5</field>
+    </record>
+
     <record id= "pompe_graph_view" model="ir.ui.view">
        <field name="name">eaglefuel.pompe.graph</field>
        <field name="model">eaglefuel.pompe</field>
@@ -75,6 +83,6 @@
         <field name="view_mode">tree,form,graph</field>
     </record>
 
-    <menuitem name="Pompes" id="sub_pompe_root" parent="station_root"/>
-    <menuitem name="Pompes" id="sub_sub_pompe_root" parent="sub_pompe_root" action="pompe_action"/>
+<!--    <menuitem name="Pompes" id="sub_pompe_root" parent="station_root"/>-->
+<!--    <menuitem name="Pompes" id="sub_sub_pompe_root" parent="sub_pompe_root" action="pompe_action"/>-->
 </odoo>
