--- a/views/rapportjournalier_view.xml
+++ b/views/rapportjournalier_view.xml
@@ -8,7 +8,7 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="ref"/>
+                            <field name="ref" readonly="1"/>
                             <field name="station_id"/>
                             <field name="date"/>
                             <field name="essence"/>
@@ -22,8 +22,19 @@
 <!--                        </page>-->
                     </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                  <field name="message_follower_ids" widget="mail_followers"></field>
+                  <field name="message_ids" widget="mail_thread"></field>
+              </div>
             </form>
         </field>
+    </record>
+
+    <record id="seq_rapportjournalier_ref" model="ir.sequence">
+        <field name="name">reference rapportjournalier sequence</field>
+        <field name="code">seq.rapportjournalier.ref</field>
+        <field name="prefix">rapportjrl</field>
+        <field name="padding">5</field>
     </record>
 
 
