--- a/views/servicepompiste_view.xml
+++ b/views/servicepompiste_view.xml
@@ -4,13 +4,16 @@
         <field name="model">eaglefuel.servicepompiste</field>
         <field name="arch" type="xml">
             <form string="Service pompiste">
-                <header></header>
+                <header>
+                    <button name="next_level" type="object" class="oe_highlight" string="Etat suivant"></button>
+                    <field name="state" widget="statusbar" nolabel="1"></field>
+                </header>
                 <sheet>
                     <group style="display:flex;flex-direction:row">
 <!--                        <group>-->
     <!--                        <div class="oe_right">-->
                             <group>
-                                <field name="ref"/>
+                                <field name="ref" readonly="1"/>
                                 <field name="date"/>
                                 <field name="shift"/>
                                 <field name="pompe_id"/>
@@ -57,8 +60,20 @@
                         </page>
                     </notebook>
                 </sheet>
+               <div class="oe_chatter">
+                  <field name="message_follower_ids" widget="mail_followers"></field>
+                  <field name="message_ids" widget="mail_thread"></field>
+               </div>
             </form>
         </field>
+    </record>
+
+
+    <record id="seq_servicepompiste_ref" model="ir.sequence">
+        <field name="name">reference servicepompiste sequence</field>
+        <field name="code">seq.servicepompiste.ref</field>
+        <field name="prefix">serv_pompiste</field>
+        <field name="padding">5</field>
     </record>
 
     <record model="ir.ui.view" id="servicepompiste_tree_view">
