--- a/views/servicepompiste_view.xml
+++ b/views/servicepompiste_view.xml
@@ -5,6 +5,7 @@
         <field name="arch" type="xml">
             <form string="Service pompiste">
                 <header>
+                    <button name="previous_level" type="object" class="oe_highlight" string="Etat précedent"></button>
                     <button name="next_level" type="object" class="oe_highlight" string="Etat suivant"></button>
                     <field name="state" widget="statusbar" nolabel="1"></field>
                 </header>
