ajout de la facturation et calcul du jauges

--- a/views/pompe_view.xml
+++ b/views/pompe_view.xml
@@ -33,7 +33,7 @@
                         <page string="Pistoles">
                             <field name="pistole_id"/>
                         </page>
-                        <page string="Pompistes">
+                        <page string="Services pompistes">
                             <field name="servicepompiste_id"/>
                         </page>
                     </notebook>
