--- a/views/station_view.xml
+++ b/views/station_view.xml
@@ -30,10 +30,10 @@
                                 </group>
                                     <notebook>
                                         <page string="Pompes">
-                                            <field name="pompe_id" />
+                                            <field name="pompe_id"  widget='many2many_checkbox'/>
                                         </page>
                                         <page string="Cuves">
-                                            <field name="cuve_id" />
+                                            <field name="cuve_id" widget='many2many_checkbox'/>
                                         </page>
                                         <page string="Employes">
                                             <field name="employe_id" />
